--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <title>Hello, world!</title>
     </head>
     <body>
-        <h1>Hello, world!</h1>
+        <h1>Hola, mundo!</h1>
+        <h2>Propuesta de estilo CSS responsivo para web - Tarea semana 6 IACC</h2>
         <div class="container-fluid">
             <div class="row show-grid">
                 <div class="col-lg-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet rhoncus odio lacinia tristique. Integer iaculis purus quam, placerat ornare nisl tristique nec. Vestibulum aliquet nunc lorem, sed eleifend arcu ultrices eu. Vestibulum condimentum volutpat interdum. Etiam interdum viverra placerat. Nulla efficitur, nibh nec feugiat dignissim, felis dui tempor velit, at dictum ligula quam at tortor. Phasellus et quam volutpat, gravida ipsum in, consectetur nisi. Etiam ut feugiat nisl.</div>
