--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudia Aqui</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-</head>
-<body>
-    <div class="topnav">
-        <a class="active" href="index.html">Home</a>
-        <a href="quienes-somos.html">Quienes somos</a>
-        <a href="contacto.html">Contacto</a>
-    </div>
-    
-    <div style="padding-left:16px">
-        <h2>Instituto Profesional Estudia Aquí</h2>
-        <p>En Instituto Profesional Estudia Aqui estamos comprometidos con la calidad de la educación.
-            <br>
-        Por eso, nos preocupamos de entregar a nuestros estudiantes las herramientas necesarias para
-            <br>
-        que puedan acceder a una educación de calidad, comprometidos con entregar las herramientas
-            <br>
-        que ellos necesitan para su desarrollo profesional
-            <br>
+<!doctype html>
+<html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/general.css">
+    </head>
+    <body>
+        <div>&laquo; Receta anterior &nbsp; Receta siguiente &raquo;</div>
+        <h1 class="text-center">Pollo Arvejado</h1>
+        <p style="font-size: 1.25rem;">Este es un <strong>plato típico Chileno</strong> que se prepara en todo el país</p>
+        <p class="text-right">Verás que es muy fácil de preparar!</p>
+        <p>Plato de origen chileno que aporta originalidad, sabor y color en la mesa. 
+            Utiliza ingredientes accesibles y no precisa de mucho tiempo. Esta preparación, 
+            es especial porque une la vigencia de una carne de consumo clásico con el sabor 
+            tradicional de la cocina chilena. Es una comida saludable porque emplea un tipo 
+            de carne de bajo contenido graso en combinación con verduras de distintos tipos, 
+            lo que la hace apropiada para el consumo de todo tipo de personas, sanas, enfermas o 
+            convalecientes
         </p>
-        <div class="mySlides">
-            <img src="images/comex.png" style="width:100%;">
-            <img src="images/comex2.png" style="width:100%">
-            <img src="images/comex3.png" style="width:100%">
-        </div>
-    </div>
-</body>
+        <br>
+        <p> Reflexiona sobre esto <em>"Una receta no tiene alma. Es el cocinero quien debe darle alma a la receta"</em></p>
+        <p class="text-right">Thomas Keller. Chef británico</p>
+        <p>El elemento <code>&lt;p&gt;Reflexiona sobre esto &lt;em&gt;"Una receta no tiene alma. Es el cocinero quien debe darle alma a la receta"&lt;/em&gt;&lt;/p&gt;</code></p>
+        <form role="form">
+            <div class="form-group">
+                <label for="correo"><strong>Correo</strong></label>
+                <input type="email" class="form-control" id="correo" placeholder="Introduce tu correo electrónico">
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Si deseas recibir nuestras recetas activa esta casilla
+                </label>
+            </div>
+            <button type="submit" class="btn btn-primary active">Enviar</button>
+        </form>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="js/bootstrap.min.js"></script>
+    </body>
 </html>
